# terminal-countdown-timer

./: LICENSE  README.md  terminal-countdown-timer.cabal
app/: Main.hs
src/: Countdown.hs  Helper.hs  ProgressBar.hs  Timer.hs
test/: Spec.hs
