name:                terminal-countdown-timer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/berto/terminal-countdown-timer#readme
license:             BSD3
license-file:        LICENSE
author:              berto 
maintainer:          berto.ort@gmail.com
copyright:           2017 berto
category:            Terminal
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Timer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable timer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative 
                     , terminal-countdown-timer
  default-language:    Haskell2010

test-suite terminal-countdown-timer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec   == 2.*
                     , terminal-countdown-timer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/berto/terminal-countdown-timer
